--- a/components.html
+++ b/components.html
@@ -1,56 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title>Components</title>
-</head>
-    <body>
-        <nav class="nav">
-            <a class="nav-link fw-bolder" href="/index.html">Index</a>
-            <a class="nav-link fw-bolder" href="/typography.html">Typography</a>
-            <a class="nav-link disabled fw-bolder" href="/components.html">Components</a>
-            <a class="nav-link fw-bolder" href="/utilities.html">Utilities</a>
-            <a class="nav-link fw-bolder" href="/layout.html">Layout</a>
-            <a class="nav-link fw-bolder" href="/the-book.html">The Book</a>
-        </nav>
-        <hr>
-        <br>
+  </head>
+  <body>
+    <nav class="nav">
+      <a class="nav-link fw-bolder" href="/index.html">Index</a>
+      <a class="nav-link fw-bolder" href="/typography.html">Typography</a>
+      <a class="nav-link disabled fw-bolder" href="/components.html"
+        >Components</a
+      >
+      <a class="nav-link fw-bolder" href="/utilities.html">Utilities</a>
+      <a class="nav-link fw-bolder" href="/layout.html">Layout</a>
+      <a class="nav-link fw-bolder" href="/the-book.html">The Book</a>
+    </nav>
+    <hr />
+    <br />
 
-        <!-- basic buttons -->
-        <h2>Buttons</h2>
+    <!-- basic buttons -->
+    <h2>Buttons</h2>
 
-        <button class="btn btn-primary">primary button</button>
-        <button class="btn btn-secondary">secondary button</button>
+    <button class="btn btn-primary">primary button</button>
+    <button class="btn btn-secondary">secondary button</button>
 
-        <!-- anchor tags as buttons -->
-        <h2>Links as buttons</h2>
+    <!-- anchor tags as buttons -->
+    <h2>Links as buttons</h2>
 
-        <a href="#" class="btn btn-info">info anchor tag</a>
-        <a href="#" class="btn btn-success">success anchor tag</a>
+    <a href="#" class="btn btn-info">info anchor tag</a>
+    <a href="#" class="btn btn-success">success anchor tag</a>
 
-        <!-- button sizes -->
-        <h2>Button sizes</h2>
+    <!-- button sizes -->
+    <h2>Button sizes</h2>
 
-        <button class="btn btn-lg btn-danger">big danger button</button>
-        <button class="btn btn-sm btn-warning">small warning button</button>
+    <button class="btn btn-lg btn-danger">big danger button</button>
+    <button class="btn btn-sm btn-warning">small warning button</button>
 
-        <!-- outllined buttons -->
-        <h2>Outlined buttons</h2>
-        <button class="btn btn-outline-primary">outlined primary button</button>
-        <button class="btn btn-outline-secondary btn-lg">large outlined secondary button</button>
+    <!-- outllined buttons -->
+    <h2>Outlined buttons</h2>
+    <button class="btn btn-outline-primary">outlined primary button</button>
+    <button class="btn btn-outline-secondary btn-lg">
+      large outlined secondary button
+    </button>
 
-        <!-- button groups -->
-        <h2>Button groups</h2>
+    <!-- button groups -->
+    <h2>Button groups</h2>
 
-        <div class="btn-group">
-            <a href="#" class="btn btn-primary">button 1</a>
-            <a href="#" class="btn btn-warning">button 2</a>
-            <a href="#" class="btn btn-success">button 3</a>
+    <div class="btn-group">
+      <a href="#" class="btn btn-primary">button 1</a>
+      <a href="#" class="btn btn-warning">button 2</a>
+      <a href="#" class="btn btn-success">button 3</a>
+    </div>
+
+    <!-- navbar -->
+    <h2>Navbar</h2>
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container-xxl">
+        <a href="#intro" class="navbar-brand">
+          <span class="fw-bold text-secondary"> Net Ninja Pro - The Book </span>
+        </a>
+        <!-- toggle button for mobile nav -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#main-nav"
+          aria-controls="main-nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- navbar links -->
+        <div
+          class="collapse navbar-collapse justify-content-end align-center"
+          id="main-nav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#topics">About The Book</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reviews">Reviews</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Get in Touch</a>
+            </li>
+            <li class="nav-item d-md-none">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item ms-2 d-none d-md-inline">
+              <a class="btn btn-secondary" href="#pricing">buy now</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- cards -->
+    <h2>Cards</h2>
+    <section id="pricing" class="bg-light mt-5">
+      <div class="container-lg">
+        <div class="text-center">
+          <h2>Pricing Plans</h2>
+          <p class="lead text-muted">Choose a pricing plan to suit you.</p>
         </div>
 
+        <div class="row my-5 align-items-center justify-content-center g-0">
+          <div class="col-8 col-lg-4 col-xl-3">
+            <div class="card border-0">
+              <div class="card-body text-center py-4">
+                <h4 class="card-title">Starter Edition</h4>
+                <p class="lead card-subtitle">eBook download only</p>
+                <p class="display-5 my-4 text-primary fw-bold">$12.99</p>
+                <p class="card-text mx-5 text-muted d-none d-lg-block">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                  fuga itaque dolores.
+                </p>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3"
+                  >Buy Now</a
+                >
+              </div>
+            </div>
+          </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
+          <div class="col-9 col-lg-4">
+            <div class="card border-primary border-2">
+              <div class="card-header text-center text-primary">
+                Most Popular
+              </div>
+              <div class="card-body text-center py-5">
+                <h4 class="card-title">Complete Edition</h4>
+                <p class="lead card-subtitle">eBook download & all updates</p>
+                <p class="display-4 my-4 text-primary fw-bold">$18.99</p>
+                <p class="card-text mx-5 text-muted d-none d-lg-block">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Porro ullam cupiditate quasi.
+                </p>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3"
+                  >Buy Now</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-8 col-lg-4 col-xl-3">
+            <div class="card border-0">
+              <div class="card-body text-center py-4">
+                <h4 class="card-title">Ultimate Edition</h4>
+                <p class="lead card-subtitle">download, updates & extras</p>
+                <p class="display-5 my-4 text-primary fw-bold">$22.99</p>
+                <p class="card-text mx-5 text-muted d-none d-lg-block">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                  fuga itaque dolores.
+                </p>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3"
+                  >Buy Now</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
