--- a/components.html
+++ b/components.html
@@ -9,6 +9,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <title>Components</title>
   </head>
   <body>
@@ -171,6 +175,347 @@
         </div>
       </div>
     </section>
+
+    <!-- reviews list -->
+    <h2>List group - Review list with icons</h2>
+    <section id="reviews" class="bg-light">
+      <div class="container-lg">
+        <div class="text-center">
+          <h2><i class="bi bi-stars"></i> Book Reviews</h2>
+          <p class="lead">What my students have said about the book...</p>
+        </div>
+
+        <div class="row justify-content-center my-5">
+          <div class="col-lg-8">
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima maxime id delectus dicta vel dolor quidem ullam animi
+                  quo expedita reiciendis molestias perspiciatis inventore
+                  nostrum at, blanditiis ratione debitis assumenda.
+                </p>
+                <small>Review by Mario</small>
+              </div>
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima maxime id delectus dicta vel dolor quidem ullam animi
+                  quo expedita reiciendis molestias perspiciatis inventore
+                  nostrum at, blanditiis ratione debitis assumenda.
+                </p>
+                <small>Review by Mario</small>
+              </div>
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima maxime id delectus dicta vel dolor quidem ullam animi
+                  quo expedita reiciendis molestias perspiciatis inventore
+                  nostrum at, blanditiis ratione debitis assumenda.
+                </p>
+                <small>Review by Mario</small>
+              </div>
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima maxime id delectus dicta vel dolor quidem ullam animi
+                  quo expedita reiciendis molestias perspiciatis inventore
+                  nostrum at, blanditiis ratione debitis assumenda.
+                </p>
+                <small>Review by Mario</small>
+              </div>
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima maxime id delectus dicta vel dolor quidem ullam animi
+                  quo expedita reiciendis molestias perspiciatis inventore
+                  nostrum at, blanditiis ratione debitis assumenda.
+                </p>
+                <small>Review by Mario</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- get updates / modal trigger -->
+    <h2>Modal and modal trigger</h2>
+    <section class="bg-light">
+      <div class="container">
+        <div class="text-center">
+          <h2>Stay in The Loop</h2>
+          <p class="lead">Get the latest updates as they happen...</p>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <p class="text-muted my-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In
+              doloremque soluta neque itaque sapiente esse molestias similique
+              nemo excepturi, aspernatur sed laudantium. Ut at id saepe. Aliquam
+              suscipit molestias quos.
+            </p>
+            <button
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#reg-modal"
+            >
+              Register for Updates
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- modal itself -->
+
+    <div
+      class="modal fade"
+      id="reg-modal"
+      tabindex="-1"
+      aria-labelledby="modal-title"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-title">Get the Latest Updates</h5>
+            <button
+              class="btn-close"
+              type="button"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Blanditiis accusantium soluta sequi labore illum quae itaque a,
+              incidunt quasi, deleniti ratione quam praesentium amet rem eum
+              voluptatum beatae nostrum ab!
+            </p>
+            <label for="modal-email" class="form-label"
+              >Your email adress</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="modal-email"
+              placeholder="e.g. mario@example.com"
+            />
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- open sidebar / offcanvas -->
+    <!-- trigger -->
+    <h2>Open sidebar/offcanvas</h2>
+    <a
+      href="#sidebar"
+      class="d-block mt-3"
+      data-bs-toggle="offcanvas"
+      role="button"
+      aria-controls="sidebar"
+    >
+      Explore my other books
+    </a>
+
+    <!-- sidebar/offcanvas itself -->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="sidebar"
+      aria-labelledby="siderbar-label"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="sidebar-label">My Other Books</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+          magni, tenetur doloribus error ullam voluptate porro quidem ipsam
+          inventore quam voluptatum hic quisquam ut corrupti molestiae. Pariatur
+          voluptas iure vel.
+        </p>
+        <!-- dropdown -->
+        <ul class="dropdown mt-3">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="book-dropdown"
+            data-bs-toggle="dropdown"
+          >
+            Choose a book title
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="book-dropdown">
+            <li>
+              <a href="#" class="dropdown-item">Become a React Superhero</a>
+            </li>
+            <li><a href="#" class="dropdown-item">Conquering Vue.js</a></li>
+            <li>
+              <a href="#" class="dropdown-item">Levelling up Your Next.js</a>
+            </li>
+          </ul>
+        </ul>
+      </div>
+    </div>
+
+    <br />
+    <!-- tabs -->
+    <h2>Tabs</h2>
+    <div class="container my-5">
+      <nav>
+        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+          <button
+            class="nav-link active"
+            id="nav-home-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#nav-home"
+            type="button"
+            role="tab"
+            aria-controls="nav-home"
+            aria-selected="true"
+          >
+            Home
+          </button>
+
+          <button
+            class="nav-link"
+            id="nav-profile-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#nav-profile"
+            type="button"
+            role="tab"
+            aria-controls="nav-profile"
+            aria-selected="false"
+          >
+            Profile
+          </button>
+
+          <button
+            class="nav-link"
+            id="nav-contact-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#nav-contact"
+            type="button"
+            role="tab"
+            aria-controls="nav-contact"
+            aria-selected="false"
+          >
+            Contact
+          </button>
+        </div>
+      </nav>
+      <div class="tab-content" id="nav-tabContent">
+        <div
+          class="tab-pane fade show active p-3"
+          id="nav-home"
+          role="tabpanel"
+          aria-labelledby="nav-home-tab"
+        >
+          <h2>Home</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
+            provident corporis aut, ipsa tenetur vel illo excepturi voluptate
+            molestiae magnam, totam est id alias dicta a assumenda corrupti et
+            repellat.
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
+            provident corporis aut, ipsa tenetur vel illo excepturi voluptate
+            molestiae magnam, totam est id alias dicta a assumenda corrupti et
+            repellat.
+          </p>
+        </div>
+
+        <div
+          class="tab-pane fade p-3"
+          id="nav-profile"
+          role="tabpanel"
+          aria-labelledby="nav-profile-tab"
+        >
+          <h2>Profile</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+            cupiditate nam aperiam possimus, ratione modi enim inventore
+            reiciendis ipsum mollitia, adipisci accusamus! Dolorem omnis illo
+            incidunt ex, sit minus numquam.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+            cupiditate nam aperiam possimus, ratione modi enim inventore
+            reiciendis ipsum mollitia, adipisci accusamus! Dolorem omnis illo
+            incidunt ex, sit minus numquam.
+          </p>
+        </div>
+
+        <div
+          class="tab-pane fade p-3"
+          id="nav-contact"
+          role="tabpanel"
+          aria-labelledby="nav-contact-tab"
+        >
+          <h2>Contact</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            voluptates nostrum vel officiis! Magni animi assumenda numquam
+            exercitationem facilis! Excepturi, doloremque illo. Voluptate, natus
+            molestias? Enim repellendus earum ad sunt!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            voluptates nostrum vel officiis! Magni animi assumenda numquam
+            exercitationem facilis! Excepturi, doloremque illo. Voluptate, natus
+            molestias? Enim repellendus earum ad sunt!
+          </p>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
